<resources>
    <string name="app_name">Android Totó</string>
    <string name="meccsek">Meccsek</string>
    <string name="_o1">1</string>
    <string name="x">X</string>
    <string name="_1">1.</string>
    <string name="o_2">2</string>
    <string name="grid_layout">GRID LAYOUT</string>
    <string name="_8">8.</string>
    <string name="_6">6.</string>
    <string name="_5">5.</string>
    <string name="_4">4.</string>
    <string name="_3">3.</string>
    <string name="_2">2.</string>
    <string name="_9">9.</string>
    <string name="_10">10.</string>
    <string name="_11">11.</string>
    <string name="ment_s">Mentés</string>
    <string name="_7">7.</string>
    <string name="_12">12.</string>
    <string name="_13">13.</string>
    <string name="_13_1">13+1</string>
    <string name="todo">TODO</string>
    <string name="tippel_s">Tippelés</string>
    <string name="nyerem_ny_adatok">Nyeremény adatok</string>
    <string name="tipposzlopok_szama">Tipposzlopok száma:</string>
    <string name="db">db</string>
    <string name="shakeimage">shakeImage</string>
    <string name="vissza_a_f_men_be">Vissza a főmenübe</string>
    <string name="ezut_n">Ezután:</string>
    <string name="add_meg_a_tipposzlopok_sz_m_t">Add meg a tipposzlopok számát!\n(Legalább kettőt.)</string>
    <string name="k_zi_tippel_s">Kézi tippelés</string>
    <string name="random_tippel_s">Random tippelés</string>
    <string name="nyerem_nyfelv_tel">Nyereményfelvétel</string>
    <string name="vissza">Vissza</string>
    <string name="sz_mlasz_m">Számlaszám (Kötőjelek nélkül)</string>
    <string name="nev">Név</string>
    <string name="informacio">Információk\naz aktuális fordulóról\n(mérkőzések, nyeremények)</string>
    <string name="buttonInformation">További információk</string>
    <string name="sms_toto_leiras">SMS Totó leírás</string>
</resources>